// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonPopUpLayout render all 1`] = `
<div
  class="content"
>
  <p
    class="title"
  >
    testTitle
  </p>
  pseudoChildren
  <div
    class="footer"
  >
    <button
      class="btn btn-green btn-contained btn-middle btnSkeuomorph"
      data-test-id="information-close-button"
      type="button"
    >
      <span
        class="buttonLabel"
      >
        testButtonLabel
      </span>
    </button>
  </div>
</div>
`;

exports[`CommonPopUpLayout render with default props 1`] = `
<div
  class="content"
>
  <div
    class="footer"
  >
    <button
      class="btn btn-green btn-contained btn-middle btnSkeuomorph"
      data-test-id="information-close-button"
      type="button"
    >
      <span
        class="buttonLabel"
      >
        Понятно
      </span>
    </button>
  </div>
</div>
`;
